<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="@string/default_board"
        app:entries="@array/board_size_entries"
        app:entryValues="@array/board_size_values"
        app:key="list_preference_board_size"
        app:summary="%s"
        app:title="Board size" />
    <CheckBoxPreference
        app:defaultValue="@string/default_true"
        app:key="check_box_preference_coordinates"
        app:summaryOff="@string/coordinates_off"
        app:summaryOn="@string/coordinates_on"
        app:title="@string/coordinates" />
    <CheckBoxPreference
        app:defaultValue="@string/default_true"
        app:key="check_box_preference_numbers"
        app:summaryOff="@string/numbered_moves_off"
        app:summaryOn="@string/numbered_moves_on"
        app:title="@string/numbered_moves" />
    <CheckBoxPreference
        app:defaultValue="@string/default_false"
        app:key="check_box_preference_zoom"
        app:summaryOff="@string/zoom_off"
        app:summaryOn="@string/zoom_on"
        app:title="@string/zoom" />
    <CheckBoxPreference
        app:defaultValue="@string/default_true"
        app:key="check_box_preference_forbidden"
        app:summaryOff="@string/forbidden_moves_off"
        app:summaryOn="@string/forbidden_moves_on"
        app:title="@string/forbidden_moves" />
    <CheckBoxPreference
        app:defaultValue="@string/default_false"
        app:key="check_box_preference_losers"
        app:summaryOff="@string/losing_moves_off"
        app:summaryOn="@string/losing_moves_on"
        app:title="@string/losing_moves" />
    <CheckBoxPreference
        app:defaultValue="@string/default_false"
        app:enabled="false"
        app:key="check_box_preference_blockers"
        app:summaryOff="@string/blocking_moves_off"
        app:summaryOn="@string/blocking_moves_on"
        app:title="@string/blocking_moves" />

</PreferenceScreen>