<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android2="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android2:title="@string/ai_settings">
        <CheckBoxPreference
            android2:defaultValue="false"
            android2:key="check_box_preference_AI_black"
            android2:title="@string/ai_black" />
        <CheckBoxPreference
            android2:defaultValue="false"
            android2:key="check_box_preference_AI_white"
            android2:title="@string/ai_white" />
        <CheckBoxPreference
            android2:clickable="false"
            android2:defaultValue="false"
            android2:key="check_box_preference_database"
            android2:summaryOff="@string/use_database_off"
            android2:summaryOn="@string/use_database_on"
            android2:title="@string/use_database"
            app:enabled="false" />
        <CheckBoxPreference
            android2:clickable="false"
            android2:defaultValue="false"
            android2:key="check_box_preference_multicore"
            android2:summaryOff="@string/multithreading_off"
            android2:summaryOn="@string/multithreading_on"
            android2:title="@string/multithreading"
            app:enabled="false" />

    </PreferenceCategory>
    <PreferenceCategory android2:title="@string/board">
        <CheckBoxPreference
            android2:defaultValue="true"
            android2:key="check_box_preference_coordinates"
            android2:summaryOff="@string/coordinates_off"
            android2:summaryOn="@string/coordinates_on"
            android2:title="@string/coordinates" />
        <CheckBoxPreference
            android2:defaultValue="true"
            android2:key="check_box_preference_numbers"
            android2:summaryOff="@string/numbered_moves_off"
            android2:summaryOn="@string/numbered_moves_on"
            android2:title="@string/numbered_moves" />
        <CheckBoxPreference
            android2:defaultValue="false"
            android2:key="check_box_preference_zoom"
            android2:summaryOff="@string/zoom_off"
            android2:summaryOn="@string/zoom_on"
            android2:title="@string/zoom" />
        <CheckBoxPreference
            android2:defaultValue="false"
            android2:key="check_box_preference_forbidden"
            android2:summaryOff="@string/forbidden_moves_off"
            android2:summaryOn="@string/forbidden_moves_on"
            android2:title="@string/forbidden_moves" />

    </PreferenceCategory>
</androidx.preference.PreferenceScreen>