<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:defaultValue="@string/default_time"
        app:entries="@array/level_entries"
        app:entryValues="@array/level_values"
        app:key="list_preference_time"
        app:summary="%s"
        app:title="Time per move" />
    <ListPreference
        app:defaultValue="@string/default_cache"
        app:entries="@array/cache_entries"
        app:entryValues="@array/cache_values"
        app:key="list_preference_cache"
        app:summary="%s"
        app:title="Transposition table" />
    <ListPreference
        android:layout_height="wrap_content"
        app:defaultValue="@string/default_threads"
        app:enabled="false"
        app:entries="@array/thread_count_entries"
        app:entryValues="@array/thread_count_values"
        app:key="check_box_preference_multicore"
        app:summary="%s"
        app:title="@string/multithreading_no" />

</PreferenceScreen>