<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <cz.fontan.gomoku_gui.BoardView
        android:id="@+id/board_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00E5FF"
        android:contentDescription="@string/board_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/board_view">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewLabelDepth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/depth"
                tools:text="@string/depth" />

            <TextView
                android:id="@+id/textViewLabelEval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eval"
                tools:text="@string/eval" />

            <TextView
                android:id="@+id/textViewLabelNodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nodes"
                tools:text="@string/nodes" />

            <TextView
                android:id="@+id/textViewLabelSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed"
                tools:text="@string/speed" />

            <TextView
                android:id="@+id/textViewLabelStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                tools:text="@string/status" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewDataDepth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                tools:text="@string/none" />

            <TextView
                android:id="@+id/textViewDataEval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                tools:text="@string/none" />

            <TextView
                android:id="@+id/textViewDataNodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                tools:text="@string/none" />

            <TextView
                android:id="@+id/textViewDataSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                tools:text="@string/none" />

            <TextView
                android:id="@+id/textViewDataStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none"
                tools:text="@string/none" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/button_play"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/button_stop"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_undo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/button_undo"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_redo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/button_redo"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/button_new"
                android:textAllCaps="false" />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

