<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textViewAboutSW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sw_name"
                    android:textSize="@dimen/text_size_about"
                    tools:text="SW Name" />

                <TextView
                    android:id="@+id/textViewAboutSWValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textSize="@dimen/text_size_about"
                    tools:text="@string/app_name" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textViewAboutAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/author"
                    android:textSize="@dimen/text_size_about"
                    tools:text="Author" />

                <TextView
                    android:id="@+id/textViewAboutAuthorValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/miroslav_fontan"
                    android:textSize="@dimen/text_size_about"
                    tools:text="Miroslav Fontan" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textViewAboutSWVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/version"
                    android:textSize="@dimen/text_size_about"
                    tools:text="@string/version" />

                <TextView
                    android:id="@+id/textViewAboutSWVersionValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/versionName"
                    android:textSize="@dimen/text_size_about"
                    tools:text="@string/versionName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textViewAboutEngineVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/engine_version"
                    android:textSize="@dimen/text_size_about"
                    tools:text="@string/engine_version" />

                <TextView
                    android:id="@+id/textViewAboutEngineVersionValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/versionName"
                    android:textSize="@dimen/text_size_about"
                    tools:text="@string/versionName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textViewAboutBuildDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/build_date"
                    android:textSize="@dimen/text_size_about"
                    tools:text="Build date" />

                <TextView
                    android:id="@+id/textViewAboutBuildDateValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none"
                    android:textSize="@dimen/text_size_about"
                    tools:text="@string/none" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textViewAboutWWW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/www"
                    android:textSize="@dimen/text_size_about"
                    tools:text="WWW:" />

                <TextView
                    android:id="@+id/textViewAboutWWWLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/www_address"
                    android:textSize="@dimen/text_size_about"
                    tools:text="https://www.facebook.com/embryo.engine" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textViewAboutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textSize="@dimen/text_size_about"
                    tools:text="Email" />

                <TextView
                    android:id="@+id/textViewAboutEmailLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="email"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/email_address"
                    android:textSize="@dimen/text_size_about"
                    tools:text="mira.fontan@gmail.com" />

            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>